Update README.md file.                                                                                 Install gulp-replace & write cacheBustTask.

--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
   <link rel="stylesheet" href="node_modules/@fortawesome/fontawesome-free/css/all.css">
   <link rel="preconnect" href="https://cdnjs.cloudflare.com/" crossorigin>
   <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;500&display=swap">
-  <link rel="stylesheet" href="css/styles.css">
+  <link rel="stylesheet" href="css/styles.css?cb=1594703166128">
 </head>
 
 <body>
@@ -83,7 +83,7 @@
         <use xlink:href="/node_modules/bootstrap-icons/bootstrap-icons.svg#exclamation-triangle" x="0" y="0" /></svg> bootstrap</p>
     <p><i class="fab fa-font-awesome"> awesome</i></p>
   </footer>
-  <script src="js/all.js"></script>>
+  <script src="js/all.js?cb=1594703166128"></script>
 </body>
 
 </html>
